desenv_tests/test-assets/field/failure/nested_with_default_env.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(nested, default(env = "env"))]
    field: String
}

fn main(){}